fix layout issues

--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -2,25 +2,42 @@
   box-sizing: border-box;
 }
 
-body {
+html,
+body,
+#root {
+  height: 100%;
+  max-height: 100%;
   margin: 0;
+  position: relative;
+  overflow: hidden;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  max-height: 100%;
-  height: 100%;
+.paper-container {
+  padding: 16px;
   overflow: hidden;
+  height: 100%;
+  max-height: 100%;
 
-  > .MuiTabs-root {
-    flex-shrink: 0;
-    margin-top: 8px;
-  }
-
-  > .MuiTabPanel-root {
-    padding: 0;
-    flex: 1;
+  .content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     overflow: hidden;
+
+    > .MuiTabs-root {
+      flex: none;
+      margin-top: 8px;
+    }
+
+    > .MuiTabPanel-root {
+      padding: 0;
+      display: flex;
+      flex-flow: column nowrap;
+      flex: auto;
+      overflow: hidden;
+    }
+    [hidden] {
+      display: none;
+    }
   }
 }
