--- a/src/Components/RosterDisplay.scss
+++ b/src/Components/RosterDisplay.scss
@@ -2,6 +2,5 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  max-height: calc(100% - 70px);
   overflow: auto;
 }
